--- a/data/acs_to_output.ipynb
+++ b/data/acs_to_output.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"zipcodes.csv\")"
+    "df = pd.read_csv(\"raw/zipcodes.csv\")"
    ]
   },
   {
@@ -1142,7 +1142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_zips_demographics.to_csv(\"cleaned_demographics_by_zip.csv\")"
+    "all_zips_demographics.to_csv(\"output/cleaned_demographics_by_zip.csv\")"
    ]
   },
   {
@@ -1733,7 +1733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "percents.to_csv(\"cleaned_percents_demo_by_zip.csv\")"
+    "percents.to_csv(\"output/cleaned_percents_demo_by_zip.csv\")"
    ]
   },
   {
